# crowd

./: .gitignore  CMakeLists.txt  README.md  a_star.cpp  a_star.h  agent.cpp  agent.h  calculator.cpp  calculator.h  checkpoint.h  config new.json  config.json  crowd  crowd.pro  crowd_parameters.cpp  crowd_parameters.h  crowdparameters.ui  engine.cpp  engine.h  entry.h  exit.cpp  exit.h  general_builder.cpp  general_builder.h  is_in_polygon.h  json_manager.cpp  json_manager.h  lee.cpp  lee.h  leePathfinder.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map_search_node.cpp  objects_pool.cpp  objects_pool.h  obstacle.cpp  obstacle.h  paint_widget.cpp  (+16 more)
config/: config.json
schemes/: scheme.json  station.json  torine.json
src/: CMakeLists.txt  a_star.cpp  a_star.h  a_star_step.cpp  a_star_step.h  agent.cpp  agent.h  calculator.cpp  calculator.h  checkpoint.cpp  checkpoint.h  crowdparameters.ui  engine.cpp  engine.h  entry.cpp  exit.cpp  exit.h  general_builder.cpp  general_builder.h  is_in_polygon.h  json_manager.cpp  json_manager.h  lee.cpp  lee.h  leePathfinder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map_container.h  map_search_node.cpp  map_search_node.h  non_gui.h  objects_pool.cpp  objects_pool.h  obstacle.cpp  obstacle.h  paint_widget.cpp  paint_widget.h  pia.cpp  (+9 more)
